src/objects/dupcheck__dcTrigger__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Management of DC Triggers on User, Profile or Org level. Only use under advicement of Plauti support. If setting is enabled, this trigger is disabled. ENABLED = DISABLED</description>
    <label>DC Trigger Management</label>
    <fields>
        <fullName>dupcheck__DuplicateDeleteEmptyGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>dupcheck__dc3Duplicate__c delete empty groups</description>
        <label>Duplicate Delete Emptry Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__DuplicateGroupValues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>dupcheck__dc3Duplicate__c fill Group filter values</description>
        <label>Duplicate Group Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__DuplicateLookup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>dupcheck__dc3Duplicate__c fill additional lookup fields</description>
        <label>Duplicate Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__QueueStart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>dupcheck__dcQueue__c start the Queuebatch on insert</description>
        <label>Queue Start</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>